feat(permission): 增加角色名称显示并优化权限缓存逻辑